--- a/package.json
+++ b/package.json
@@ -8,6 +8,11 @@
     "postinstall": "nuxt prepare"
   },
   "devDependencies": {
-    "nuxt": "^3.1.2"
+    "nuxt": "^3.1.2",
+    "sass": "^1.58.0"
+  },
+  "dependencies": {
+    "mdi": "^2.2.43",
+    "vuetify": "^3.1.4"
   }
 }
