--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "sass": "^1.58.0"
   },
   "dependencies": {
+    "@nuxtjs/axios": "^5.13.6",
     "mdi": "^2.2.43",
     "vuetify": "^3.1.4"
   }
