--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@nuxtjs/axios": "^5.13.6",
     "mdi": "^2.2.43",
+    "vee-validate": "^4.7.4",
     "vuetify": "^3.1.4"
   }
 }
